--- a/app.json
+++ b/app.json
@@ -1,19 +1,25 @@
 {
   "name": "PingCRM",
-  "description": "
-A Ruby on Rails demo application to illustrate how Inertia.js works https: //pingcrm.ledermann.dev
-",
-  "website": "http://rubyonrails.org",
+  "description": "A Ruby on Rails demo application to illustrate how Inertia.js works https: //pingcrm.ledermann.dev",
+  "website": "https://small-sharp-tool.com/",
   "repository": "https://github.com/captproton/pingcrm",
   "logo": "https://upload.wikimedia.org/wikipedia/commons/c/c3/Ruby_on_Rails_logo.svg",
   "scripts": {
     "postdeploy": "bundle exec rake db:seed"
   },
-  "env": {
-    "RAILS_ENV": "production",
-    "RACK_ENV": "production",
-    "RAILS_SERVE_STATIC_FILES": "true"
+  "formation": {
+    "web": {
+      "quantity": 2,
+      "size": "free"
+    }
   },
-  "addons": ["heroku-postgresql"]
+  "image": "heroku/ruby",
+  "buildpacks": "buildpacks": [
+    {
+      "url": "heroku/nodejs"
+    },
+    {
+      "url": "heroku/ruby"
+    }
+  ]
 }
-
