--- a/app.json
+++ b/app.json
@@ -1,13 +1,12 @@
 {
-  "name": "Small Sharp Tool",
+  "name": "PingCRM",
   "description": "This app does one little thing, and does it well.",
   "keywords": ["productivity", "HTML5", "scalpel"],
   "website": "https://small-sharp-tool.com/",
   "repository": "https://github.com/jane-doe/small-sharp-tool",
   "logo": "https://small-sharp-tool.com/logo.svg",
-  "success_url": "/welcome",
   "scripts": {
-    "postdeploy": "bundle exec rake bootstrap"
+    "postdeploy": "bundle exec rake seed"
   },
   "env": {
     "SECRET_TOKEN": {
@@ -21,24 +20,12 @@
   },
   "formation": {
     "web": {
-      "quantity": 2,
-      "size": "Performance-M"
+      "quantity": 1,
+      "size": "free"
     }
   },
   "image": "heroku/ruby",
-  "addons": [
-    "openredis",
-    {
-      "plan": "mongolab:shared-single-small",
-      "as": "MONGO"
-    },
-    {
-      "plan": "heroku-postgresql",
-      "options": {
-        "version": "9.5"
-      }
-    }
-  ],
+  "addons": [],
   "buildpacks": [
     {
       "url": "https://github.com/stomita/heroku-buildpack-phantomjs"
