CHANGE: attempt to fix bugs in app.json

--- a/app.json
+++ b/app.json
@@ -26,11 +26,7 @@
   },
   "image": "heroku/ruby",
   "addons": [],
-  "buildpacks": [
-    {
-      "url": "https://github.com/stomita/heroku-buildpack-phantomjs"
-    }
-  ],
+  "buildpacks": [],
   "environments": {
     "test": {
       "scripts": {
