--- a/app.json
+++ b/app.json
@@ -5,9 +5,6 @@
   "website": "https://small-sharp-tool.com/",
   "repository": "https://github.com/jane-doe/small-sharp-tool",
   "logo": "https://small-sharp-tool.com/logo.svg",
-  "scripts": {
-    "postdeploy": "bundle exec rake seed"
-  },
   "env": {
     "SECRET_TOKEN": {
       "description": "A secret key for verifying the integrity of signed cookies.",
@@ -26,9 +23,13 @@
   },
   "image": "heroku/ruby",
   "addons": [],
-  "buildpacks": [],
+  "buildpacks": [
+    {
+      "url": "heroku/nodejs"
+    }
+  ],
   "environments": {
-    "test": {
+    "production": {
       "scripts": {
         "test": "bundle exec rake test"
       }
