--- a/app.json
+++ b/app.json
@@ -2,18 +2,14 @@
   "name": "PingCRM",
   "description": "This app does one little thing, and does it well.",
   "keywords": ["productivity", "HTML5", "scalpel"],
-  "website": "https://small-sharp-tool.com/",
-  "repository": "https://github.com/jane-doe/small-sharp-tool",
-  "logo": "https://small-sharp-tool.com/logo.svg",
+  "website": "https://github.com/ledermann/pingcrm",
+  "repository": "https://github.com/ledermann/pingcrm",
+  "logo": "https://www.ruby-lang.org/images/header-ruby-logo@2x.png",
   "env": {
     "SECRET_TOKEN": {
       "description": "A secret key for verifying the integrity of signed cookies.",
       "generator": "secret"
-    },
-    "WEB_CONCURRENCY": {
-      "description": "The number of processes to run.",
-      "value": "5"
-    }
+    }  
   },
   "formation": {
     "web": {
@@ -27,12 +23,8 @@
     {
       "url": "heroku/nodejs"
     }
-  ],
-  "environments": {
-    "production": {
-      "scripts": {
-        "test": "bundle exec rake test"
-      }
+    {
+      "url": "heroku/ruby"
     }
-  }
+  ]
 }
