--- a/app.json
+++ b/app.json
@@ -5,6 +5,9 @@
   "website": "https://small-sharp-tool.com/",
   "repository": "https://github.com/jane-doe/small-sharp-tool",
   "logo": "https://small-sharp-tool.com/logo.svg",
+  "scripts": {
+    "postdeploy": "bundle exec rake seed"
+  },
   "env": {
     "SECRET_TOKEN": {
       "description": "A secret key for verifying the integrity of signed cookies.",
@@ -25,11 +28,14 @@
   "addons": [],
   "buildpacks": [
     {
-      "url": "heroku/nodejs"
+      "url": "heroku/ruby"
     }
   ],
   "environments": {
-    "production": {}
+    "test": {
+      "scripts": {
+        "test": "bundle exec rake test"
+      }
     }
   }
 }
