--- a/app.json
+++ b/app.json
@@ -2,9 +2,9 @@
   "name": "PingCRM",
   "description": "This app does one little thing, and does it well.",
   "keywords": ["productivity", "HTML5", "scalpel"],
-  "website": "https://small-sharp-tool.com/",
-  "repository": "https://github.com/jane-doe/small-sharp-tool",
-  "logo": "https://small-sharp-tool.com/logo.svg",
+  "website": "https://github.com/ledermann/pingcrm",
+  "repository": "https://github.com/ledermann/pingcrm",
+  "logo": "https://www.ruby-lang.org/images/header-ruby-logo@2x.png",
   "scripts": {
     "postdeploy": "bundle exec rake seed"
   },
