FIX: markup for heroku deploy button

--- a/app.json
+++ b/app.json
@@ -28,8 +28,8 @@
   "addons": [],
   "buildpacks": [
     {
-      "url": "heroku/nodejs"
-    }
+      "url": "heroku/ruby"
+    },
     {
       "url": "heroku/ruby"
     }
