FIX: markup for heroku deploy button

--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
   "addons": [],
   "buildpacks": [
     {
-      "url": "heroku/ruby"
+      "url": "heroku/nodejs"
     },
     {
       "url": "heroku/ruby"
