--- a/app.json
+++ b/app.json
@@ -28,6 +28,9 @@
   "addons": [],
   "buildpacks": [
     {
+      "url": "https: //github.com/heroku/heroku-buildpack-activestorage-preview"
+    },
+    {
       "url": "heroku/nodejs"
     },
     {
